# insurance_planner_demo

./: .gitignore  STREAMING_CHANGES.md  docker-compose.yml  main.py  pyproject.toml
backend/: CHANGELOG_ETL_FIXES.md  db.py  graph.py  ingest.py  logging_utils.py  main.py  test_rdb.py  vector_store.py
backend/backend/data/: 02_riders.json  04_benefits.json  05_clauses.json
backend/backend/data/trash/: 05_clauses_skeleton.json
backend/backend/db/vectordb/: 00_test_vectordb_alive.py
backend/backend/etl/loaders/: clause_loader.py  product_loader.py
backend/backend/scripts/: offline_run.py  online_eval_worker.py
backend/data/: 01_products.json  02_riders.json  03_concepts.json  04_benefits.json  05_clauses.json
backend/data/common/: 06_terms.json
backend/data/debug/: debug_concepts.json  debug_products.json  debug_riders.json
backend/data/products/kyobo_b_cancer_202601/: 01_products.json  02_riders.json  04_benefits.json  05_clauses.json
backend/data/products/nh_direct_cancer_202601_type2/: 01_products.json  02_riders.json  04_benefits.json  05_clauses.json
backend/data/products/samsung_fire_direct_chak_easy_cancer_202601/: 01_products.json  02_riders.json  04_benefits.json  05_clauses.json
backend/data/products/samsung_internet_cancer_treatment_202501/: 01_products.json  02_riders.json  04_benefits.json  05_clauses.json
backend/data/trash/: 04_benefits.json  05_clauses.json  05_clauses_raw.json
backend/db/: db.py  graph_connector.py  runtime_conn.py
backend/db/rdb/: test_rdb_alive.py
backend/db/vectordb/: 01_process_and_embed.py  02_load_to_qdrant.py  03_reset_collection.py
backend/docs/: ARCHITECTURE_planner.md  FLOW_planner.md  LOGGING_MONITORING_planner.md  PRD_planner_architecture.md
backend/etl/: common.py  main_pipeline.py
backend/etl/loaders/: base_loader.py  benefit_loader.py  clause_loader.py  concept_loader.py  product_loader.py  rider_loader.py  term_loader.py
backend/eval/dataset/mapping/: questions_mapping_120.jsonl
backend/eval/dataset/natural/: questions_natural_120.jsonl  questions_natural_1to3_360.jsonl
backend/eval/datasets/controlled/: questions_controlled.jsonl
backend/eval/datasets/mapping/: questions_mapping_1to3_120.jsonl
backend/eval/metrics/: controlled_20260105_000600_metrics.jsonl  natural1to3_20260105_052438_metrics.jsonl
backend/eval/runs/: controlled_20260104_235819_outputs.jsonl  controlled_20260105_000600_outputs.jsonl
backend/logic/: retrievers.py
backend/scripts/: _utils.py  cluster_report.py  compare_runs_sameID.py  gdb_init.sh  gdb_schema.sql  langsmith_eval_min.py  offline_ragas_eval.py  offline_run.py  online_eval_worker.py
engine/: engine.py  graph.py
engine5/: engine.py  graph.py  logging_utils.py  retrievers.py  runtime_conn.py  test_connections.py
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.jsx  index.css
qdrant_data/: raft_state.json
qdrant_data/collections/concepts/0/: newest_clocks.json
qdrant_data/collections/glossary/0/: replica_state.json
qdrant_data/collections/my_knowledge_base/0/: newest_clocks.json
qdrant_data/collections/seoultech_regulations/: config.json
(+157 files in other folders)
