[project]
name = "ot-p-skai-ontovia-api"
version = "0.1.0"
description = "AgensGraph Agentic AI API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # --- Core Server & Utils ---
    "fastapi==0.115.12",
    "uvicorn==0.34.2",
    "python-dotenv==1.1.0",
    "httpx==0.28.1",
    # --- AI & Agent Framework ---
    "langgraph==0.4.8",
    "langchain-core==0.3.60",
    "langchain-openai==0.3.17",
    "langchain-community==0.3.24",
    # --- Database Drivers ---
    "psycopg2-binary==2.9.10",
    "sqlalchemy==2.0.41",
    # --- Data Validation (Pydantic V2) ---
    "pydantic==2.11.4",
    "pydantic-core==2.33.2",
    # --- Vector Search & Embedding ---
    "langchain-qdrant>=0.1.0",
    "qdrant-client>=1.7.0",
    "langchain-huggingface>=0.0.3",
    "sentence-transformers>=2.2.0",
    "flagembedding>=1.3.5",
    
    # [주의] vLLM이 자체적으로 특정 버전의 torch를 설치합니다. 
    # 따라서 명시적인 "torch>=2.2.0"은 제거하거나 vLLM에 맡기는 것이 안전합니다.
    # 여기서는 호환성을 위해 유지하되, 설치 시 vLLM이 우선시되도록 합니다.
    # "torch>=2.2.0", 
    
    # [추가] Local LLM Server (Linux/WSL Only)
    "vllm>=0.6.3", 
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]